--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -2165,7 +2165,7 @@ None - they are always stoned!","換一個燈泡需要多少石像鬼？
 4353,199688,This is an emote item.,Lua/EmoteItems.lua(00038),,,,,198395,This is an emote item. While performing emote animations you cannot move or attack.,This is an emote item. While performing emote animations you cannot move or attack.,這是一個表情物品。,,changed,,
 367,194283,Critical!,Lua/FloatingText.lua(00028),,,,,,Critical!,Critical!,暴擊！,,OK,,
 368,194283,<damage>,Lua/FloatingText.lua(00174),,,,,,<damage>,<damage>,<damage>,,OK,,
-369,194283,<damage> Deflect!,Lua/FloatingText.lua(00177),,,,,,<damage> Deflect!,<damage> Deflect!,<damage>反彈！,,OK,,
+369,194283,<damage> Deflect!,Lua/FloatingText.lua(00177),,,,,,<damage> Deflect!,<damage> Deflect!,<damage>擋開！,,OK,,
 370,194283,<damage> Overkill!,Lua/FloatingText.lua(00184),,,,,,<damage> Overkill!,<damage> Overkill!,<damage>絕殺！,,OK,,
 371,194283,"Kelvingrove, 10, aa",Lua/FontStyles.lua(00003),,HUDTargetName,,,,"Kelvingrove, 10, aa","Kelvingrove, 10, aa","Kelvingrove, 10, aa",,OK,,
 372,194283,"Kelvingrove, 10, aa",Lua/FontStyles.lua(00004),,HUDTargetPlayerName,,,,"Kelvingrove, 10, aa","Kelvingrove, 10, aa","Kelvingrove, 10, aa",,OK,,
@@ -2404,7 +2404,7 @@ Combine with other Gift Boxes in Transmutation to get better items",Lua/Item.lua
 571,194283,"Congratulations! Your Health pool has increased, allowing you to endure more damage.",Lua/LevelRewards.lua(00637),,,,,,"Congratulations! Your Health pool has increased, allowing you to endure more damage.","Congratulations! Your Health pool has increased, allowing you to endure more damage.",恭喜！你的生命力提升了，可讓你承受更大傷害。,,OK,,
 566,194283,+<number> Destiny Points,Lua/LevelRewards.lua(00651),,,,,,+<number> Destiny Points,+<number> Destiny Points,+<number>命運點,,OK,,
 567,194283,You can now equip more powerful Destiny Cards. The Destiny Points cost of all equipped cards cannot exceed your total DP.,Lua/LevelRewards.lua(00652),,,,,,You can now equip more powerful Destiny Cards. The Destiny Points cost of all equipped cards cannot exceed your total DP.,You can now equip more powerful Destiny Cards. The Destiny Points cost of all equipped cards cannot exceed your total DP.,你現在可以裝備更強力的命運牌了。所有裝備的牌所消耗的命運點不能超過你的總命運點。,,OK,,
-586,194283,<armor_icon> Armor gives a chance to deflect incoming attacks and significantly reduce their damage,Lua/LoadingTips.lua(00007),,,,,,<armor_icon> Armor gives a chance to deflect incoming attacks and significantly reduce their damage,<armor_icon> Armor gives a chance to deflect incoming attacks and significantly reduce their damage,<armor_icon> 防禦有機率反彈攻擊，並顯著降低所受傷害。,,OK,,
+586,194283,<armor_icon> Armor gives a chance to deflect incoming attacks and significantly reduce their damage,Lua/LoadingTips.lua(00007),,,,,,<armor_icon> Armor gives a chance to deflect incoming attacks and significantly reduce their damage,<armor_icon> Armor gives a chance to deflect incoming attacks and significantly reduce their damage,<armor_icon> 防禦有機率擋開攻擊，並顯著降低所受傷害。,,OK,,
 587,194283,<armor_penetration_icon> Armor penetration reduces the Armor of the target,Lua/LoadingTips.lua(00008),,,,,,<armor_penetration_icon> Armor penetration reduces the Armor of the target,<armor_penetration_icon> Armor penetration reduces the Armor of the target,<armor_penetration_icon> 護甲穿透會降低目標的防禦。,,OK,,
 588,194283,<damage_icon> The amount of damage dealt on hit,Lua/LoadingTips.lua(00009),,,,,,<damage_icon> The amount of damage dealt on hit,<damage_icon> The amount of damage dealt on hit,<damage_icon> 攻擊造成的傷害。,,OK,,
 589,194283,<crit_chance_icon> Chance to score critical damage on hit,Lua/LoadingTips.lua(00010),,,,,,<crit_chance_icon> Chance to score critical damage on hit,<crit_chance_icon> Chance to score critical damage on hit,<crit_chance_icon> 攻擊造成暴擊的機率。,,OK,,
@@ -3654,7 +3654,7 @@ Recipe: <rune_icon_1><rune_icon_2><rune_icon_3>",Lua/Transmutation.lua(00236),,,
 1098,197009,Renown Level Reward: Gift Box,Lua/UI/BaseInventory.lua(00853),,,,,,Renown Level Reward: <reward> Gold,Renown Level Reward: <reward> Gold,聲望等級獎勵：禮物箱,,OK,,
 1099,194283,Health,Lua/UI/BaseInventory.lua(00921),,,,,,Health,Health,生命,,OK,,
 1100,194283,<armor>,Lua/UI/BaseInventory.lua(00925),,,,,,<armor>,<armor>,<armor>,,OK,,
-1101,194283,Armor gives a chance to deflect attacks and reduce incoming damage (but not other effects),Lua/UI/BaseInventory.lua(00926),,,,,,Armor gives a chance to deflect attacks and reduce incoming damage (but not other effects),Armor gives a chance to deflect attacks and reduce incoming damage (but not other effects),防禦有機率反彈攻擊並降低所受傷害（但無法抵擋其它效果）,,OK,,
+1101,194283,Armor gives a chance to deflect attacks and reduce incoming damage (but not other effects),Lua/UI/BaseInventory.lua(00926),,,,,,Armor gives a chance to deflect attacks and reduce incoming damage (but not other effects),Armor gives a chance to deflect attacks and reduce incoming damage (but not other effects),防禦有機率擋開攻擊並降低所受傷害（但無法抵擋其它效果）,,OK,,
 1102,194283,-,Lua/UI/BaseInventory.lua(00930),,,,,,-,-,-,,OK,,
 1103,194283,"<armor_pen1>
 <armor_pen2>",Lua/UI/BaseInventory.lua(00930),,,,,,"<armor_pen1>
