修正部分錯誤

--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -160,7 +160,7 @@ ID,Revision,Text,Location,Section,Context,Actor,Voice Actor,Old Revision,Old Tex
 1000005,194283,Failed to initialize graphics subsystem.,CommonLua/Core/autorun.lua(00172),,,,,,,,無法初始化繪圖子系統。,,OK,,
 1000154,194283,<arg1>:<arg2>:<arg3>,CommonLua/Core/lib.lua(02246),,Hours:Minutes:Seconds,,,,,,<arg1>：<arg2>：<arg3>,,OK,,
 1000155,194283,<arg1>:<arg2>,CommonLua/Core/lib.lua(02248),,Minutes:Seconds,,,,,,<arg1>：<arg2>,,OK,,
-1000156,194283,",",CommonLua/Core/localization.lua(00413),,thousands separator,,,,,,，,,OK,,
+1000156,194283,",",CommonLua/Core/localization.lua(00413),,thousands separator,,,,,,",",,OK,,
 1000157,194283,Critical Error,CommonLua/Core/locutils.lua(00002),,,,,,,,嚴重錯誤,,OK,,
 1000158,194283,Unspecified error occurred (code %s1). The game will now close.,CommonLua/Core/locutils.lua(00003),,,,,,,,發生了一個未知錯誤（code %s1）。遊戲即將關閉。,,OK,,
 1000159,194283,You need a supported DX11-compatible video card with a recent driver to play this game.,CommonLua/Core/locutils.lua(00004),,,,,,,,你需要支援DX11的顯示卡及最新的驅動程式以運行本遊戲。,,OK,,
@@ -591,7 +591,7 @@ ID,Revision,Text,Location,Section,Context,Actor,Voice Actor,Old Revision,Old Tex
 2075,194283,Fool Proof,Data/Achievement.lua(00359),,Achievement Fool Proof display_name,,,,Fool Proof,Fool Proof,愚者證明,,OK,,
 2076,194283,Collected all the Fool Destiny Cards,Data/Achievement.lua(00360),,Achievement Fool Proof description,,,,Collected all the Fool Destiny Cards,Collected all the Fool Destiny Cards,已蒐集所有愚者命運牌,,OK,,
 2077,194283,Collect all the Fool Destiny Cards,Data/Achievement.lua(00361),,Achievement Fool Proof how_to,,,,Collect all the Fool Destiny Cards,Collect all the Fool Destiny Cards,蒐集所有愚者命運牌,,OK,,
-2078,194283,Zagore Hold'em,Data/Achievement.lua(00369),,Achievement Zagore Hold'em display_name,,,,Zagore Hold'em,Zagore Hold'em,薩格爾之物,,OK,,
+2078,194283,Zagore Hold'em,Data/Achievement.lua(00369),,Achievement Zagore Hold'em display_name,,,,Zagore Hold'em,Zagore Hold'em,扎古爾撲克,,OK,,
 2079,194283,Collected 25 different Destiny Cards,Data/Achievement.lua(00370),,Achievement Zagore Hold'em description,,,,Collected 25 different Destiny Cards,Collected 25 different Destiny Cards,已蒐集25張不同的命運牌,,OK,,
 2080,194283,Collect 25 different Destiny Cards,Data/Achievement.lua(00371),,Achievement Zagore Hold'em how_to,,,,Collect 25 different Destiny Cards,Collect 25 different Destiny Cards,蒐集25張不同的命運牌,,OK,,
 2081,194283,Tzar Bomba,Data/Achievement.lua(00379),,Achievement Tzar Bomba display_name,,,,Tzar Bomba,Tzar Bomba,沙皇炸彈,,OK,,
@@ -615,7 +615,7 @@ ID,Revision,Text,Location,Section,Context,Actor,Voice Actor,Old Revision,Old Tex
 2111,194283,Holier than Thou,Data/Achievement.lua(00442),,Achievement Holier than Thou display_name,,,,Holier than Thou,Holier than Thou,聖光罩頂,,OK,,
 2112,194283,Had 6 equipped Divine cards,Data/Achievement.lua(00443),,Achievement Holier than Thou description,,,,Had 6 equipped Divine cards,Had 6 equipped Divine cards,已裝備6張神聖牌,,OK,,
 2113,194283,Have 6 equipped Divine cards,Data/Achievement.lua(00444),,Achievement Holier than Thou how_to,,,,Have 6 equipped Divine cards,Have 6 equipped Divine cards,裝備6張神聖牌,,OK,,
-2114,194283,In It For The Gold,Data/Achievement.lua(00452),,Achievement In It For The Gold display_name,,,,In It For The Gold,In It For The Gold,為了金子,,OK,,
+2114,194283,In It For The Gold,Data/Achievement.lua(00452),,Achievement In It For The Gold display_name,,,,In It For The Gold,In It For The Gold,金錢至上,,OK,,
 2115,194283,Acquired 150 000 pieces of Gold,Data/Achievement.lua(00453),,Achievement In It For The Gold description,,,,Acquired 150 000 pieces of Gold,Acquired 150 000 pieces of Gold,"已獲取150,000枚金幣",,OK,,
 2116,194283,Acquire 150 000 pieces of Gold,Data/Achievement.lua(00454),,Achievement In It For The Gold how_to,,,,Acquire 150 000 pieces of Gold,Acquire 150 000 pieces of Gold,"獲取150,000枚金幣",,OK,,
 2117,194283,Steamed Up,Data/Achievement.lua(00462),,Achievement Steamed Up display_name,,,,Steamed Up,Steamed Up,武裝升級,,OK,,
@@ -2446,11 +2446,11 @@ Combine with other Gift Boxes in Transmutation to get better items",Lua/Item.lua
 624,194283,You need Overdrive to cast Demon Powers,Lua/LoadingTips.lua(00062),,,,,,You need Overdrive to cast Demon Powers,You need Overdrive to cast Demon Powers,你需要超能來施展惡魔之力。,,OK,,
 625,194283,"Deal damage to monsters to gain Overdrive. The more damage you do, the more Overdrive you gain",Lua/LoadingTips.lua(00063),,,,,,"Deal damage to monsters to gain Overdrive. The more damage you do, the more Overdrive you gain","Deal damage to monsters to gain Overdrive. The more damage you do, the more Overdrive you gain",對怪物造成傷害可凝聚超能。傷害越高，凝聚的超能越多。,,OK,,
 626,194283,In multiplayer you share challenge progress only with those in range,Lua/LoadingTips.lua(00065),,,,,,In multiplayer you share challenge progress only with those in range,In multiplayer you share challenge progress only with those in range,多人遊戲時，你只與範圍內的玩家共享挑戰進度。,,OK,,
-4138,196097,Press F1 to notify us about any issues you have encountered while playing,Lua/LoadingTips.lua(00066),,,,,,,,按 F1 回報你在遊戲中遇到的任何問題,,OK,,
+4138,196097,Press F1 to notify us about any issues you have encountered while playing,Lua/LoadingTips.lua(00066),,,,,,,,按 F1 回報你在遊戲中遇到的任何問題。,,OK,,
 4178,196259,Your game progress is saved automatically,Lua/LoadingTips.lua(00067),,,,,,,,遊戲進度會自動儲存。,,OK,,
 4026,195942,Transmutation allows you to add new properties to your existing weapons,Lua/LoadingTips.lua(00069),,,,,,,,合成能讓你附加新屬性到已有的武器上。,,OK,,
 4027,195942,You can maximize the characteristics of your items using the transmutation system,Lua/LoadingTips.lua(00070),,,,,,,,你可以利用合成系統充分發揮你物品的特性。,,OK,,
-4028,195942,You can add divine and wicked properties to any destiny card through transmutation,Lua/LoadingTips.lua(00071),,,,,,,,你可以透過合成給命運牌附加神聖或邪惡屬性。,,OK,,
+4028,195942,You can add divine and wicked properties to any destiny card through transmutation,Lua/LoadingTips.lua(00071),,,,,,,,你可以透過合成系統附加神聖或邪惡屬性到命運牌上。,,OK,,
 4029,195942,You can use transmutation to upgrade your equipment once you reach level <number>,Lua/LoadingTips.lua(00072),,,,,,,,當等級達到<number>級，你就可以使用合成來升級裝備。,,OK,,
 4030,195942,Use dyes in transmutation to change the color of your outfit,Lua/LoadingTips.lua(00073),,,,,,,,在合成中使用染料可改變服裝顏色。,,OK,,
 3656,195030,Directional (Default),Lua/LocalizationTexts.lua(00003),,,,,,,,指向（預設）,,OK,,
@@ -3202,15 +3202,15 @@ Red <team1_score>  ---  Blue <team2_score>",<newline>紅隊：<team1_score>分  
 1029,194283,Unlock <name>,Lua/Quest.lua(01961),,,,,,Unlock <name>,Unlock <name>,解鎖<name>,,OK,,
 970,194283,Champions,Lua/QuestTypes.lua(00167),,,,,,Champions,Champions,悍將,,OK,,
 971,194283,Champion,Lua/QuestTypes.lua(00167),,,,,,Champion,Champion,悍將,,OK,,
-3576,195189, affected by <buff>,Lua/QuestTypes.lua(00177),,,,,,,,處於<buff>狀態,,OK,,
-972,195189,Slay <monster><buff> with <weapon>,Lua/QuestTypes.lua(00184),,,,,,Slay <monster> with <weapon>,Slay <monster> with <weapon>,使用<weapon>殺死<buff>的<monster>,,OK,,
-973,195189,Slay <monster><buff>,Lua/QuestTypes.lua(00186),,,,,,Slay <monster>,Slay <monster>,殺死<buff>的<monster>,,OK,,
-974,195189,Slay <number> <monsters><buff> with <weapon>,Lua/QuestTypes.lua(00190),,,,,,Slay <number> <monsters> with <weapon>,Slay <number> <monsters> with <weapon>,使用<weapon>殺死<number>隻<buff>的<monsters>,,OK,,
-975,195189,Slay <number> <monsters><buff>,Lua/QuestTypes.lua(00192),,,,,,Slay <number> <monsters>,Slay <number> <monsters>,殺死<number>隻<buff>的<monsters>,,OK,,
-976,195189,Overkill <monster><buff> with <weapon>,Lua/QuestTypes.lua(00198),,,,,,Overkill <monster> with <weapon>,Overkill <monster> with <weapon>,使用<weapon>絕殺<buff>的<monster>,,OK,,
-977,195189,Overkill <monster><buff>,Lua/QuestTypes.lua(00200),,,,,,Overkill <monster>,Overkill <monster>,絕殺<buff>的<monster>,,OK,,
-978,195189,Overkill <number> <monsters><buff> with <weapon>,Lua/QuestTypes.lua(00204),,,,,,Overkill <number> <monsters> with <weapon>,Overkill <number> <monsters> with <weapon>,使用<weapon>絕殺<number>隻<buff>的<monsters>,,OK,,
-979,195189,Overkill <number> <monsters><buff>,Lua/QuestTypes.lua(00206),,,,,,Overkill <number> <monsters>,Overkill <number> <monsters>,絕殺<number>隻<buff>的<monsters>,,OK,,
+3576,195189, affected by <buff>,Lua/QuestTypes.lua(00177),,,,,,,,處於<buff>狀態的,,OK,,
+972,195189,Slay <monster><buff> with <weapon>,Lua/QuestTypes.lua(00184),,,,,,Slay <monster> with <weapon>,Slay <monster> with <weapon>,使用<weapon>殺死<buff><monster>,,OK,,
+973,195189,Slay <monster><buff>,Lua/QuestTypes.lua(00186),,,,,,Slay <monster>,Slay <monster>,殺死<buff><monster>,,OK,,
+974,195189,Slay <number> <monsters><buff> with <weapon>,Lua/QuestTypes.lua(00190),,,,,,Slay <number> <monsters> with <weapon>,Slay <number> <monsters> with <weapon>,使用<weapon>殺死<number>隻<buff><monsters>,,OK,,
+975,195189,Slay <number> <monsters><buff>,Lua/QuestTypes.lua(00192),,,,,,Slay <number> <monsters>,Slay <number> <monsters>,殺死<number>隻<buff><monsters>,,OK,,
+976,195189,Overkill <monster><buff> with <weapon>,Lua/QuestTypes.lua(00198),,,,,,Overkill <monster> with <weapon>,Overkill <monster> with <weapon>,使用<weapon>絕殺<buff><monster>,,OK,,
+977,195189,Overkill <monster><buff>,Lua/QuestTypes.lua(00200),,,,,,Overkill <monster>,Overkill <monster>,絕殺<buff><monster>,,OK,,
+978,195189,Overkill <number> <monsters><buff> with <weapon>,Lua/QuestTypes.lua(00204),,,,,,Overkill <number> <monsters> with <weapon>,Overkill <number> <monsters> with <weapon>,使用<weapon>絕殺<number>隻<buff><monsters>,,OK,,
+979,195189,Overkill <number> <monsters><buff>,Lua/QuestTypes.lua(00206),,,,,,Overkill <number> <monsters>,Overkill <number> <monsters>,絕殺<number>隻<buff><monsters>,,OK,,
 980,199653,<text> with a single hit,Lua/QuestTypes.lua(00212),,,,,,<text> with a single Attack or Demon Power,<text> with a single Attack or Demon Power,使用一擊<text>,,changed,,
 981,194283,<text> with Demon Powers,Lua/QuestTypes.lua(00215),,,,,,<text> with Demon Powers,<text> with Demon Powers,使用惡魔之力<text>,,OK,,
 982,194283,<text> with Bombs,Lua/QuestTypes.lua(00218),,,,,,<text> with Bombs,<text> with Bombs,使用炸彈<text>,,OK,,
@@ -4095,7 +4095,7 @@ Code ""<err>""","抱歉，伺服器回傳一個錯誤。
 1345,194283,Light Pink,Lua/UI/MenuOnline.lua(01411),,,,,,Light Pink,Light Pink,淺粉色,,OK,,
 1346,194283,Light Blue,Lua/UI/MenuOnline.lua(01412),,,,,,Light Blue,Light Blue,淺藍色,,OK,,
 1347,194283,Options,Lua/UI/Options.lua(00002),,,,,,Options,Options,選項,,OK,,
-1348,196015,Gameplay,Lua/UI/Options.lua(00006),,,,,,<font OptionsMenuEntry>Gameplay</font>,<font OptionsMenuEntry>Gameplay</font>,遊戲系統,,OK,,
+1348,196015,Gameplay,Lua/UI/Options.lua(00006),,,,,,<font OptionsMenuEntry>Gameplay</font>,<font OptionsMenuEntry>Gameplay</font>,系統,,OK,,
 1349,196015,Sound,Lua/UI/Options.lua(00013),,,,,,<font OptionsMenuEntry>Sound</font>,<font OptionsMenuEntry>Sound</font>,聲音,,OK,,
 1350,196015,Video,Lua/UI/Options.lua(00020),,,,,,<font OptionsMenuEntry>Video</font>,<font OptionsMenuEntry>Video</font>,影像,,OK,,
 4254,197295,Redeem key,Lua/UI/Options.lua(00027),,,,,,,,兌換密碼,,OK,,
@@ -4104,7 +4104,7 @@ Code ""<err>""","抱歉，伺服器回傳一個錯誤。
 1511,194283,Credits,Lua/UI/Options.lua(00053),,,,,,Credits,Credits,製作人員,,OK,,
 1351,196015,Close,Lua/UI/Options.lua(00066),,,,,,<font OptionsMenuEntry>Close</font>,<font OptionsMenuEntry>Close</font>,關閉,,OK,,
 1352,196015,Controls,Lua/UI/Options.lua(00085),,,,,,<font OptionsMenuEntry>Controls</font>,<font OptionsMenuEntry>Controls</font>,操作,,OK,,
-1353,194283,Gameplay,Lua/UI/Options.lua(00094),,,,,,Gameplay,Gameplay,遊戲系統,,OK,,
+1353,194283,Gameplay,Lua/UI/Options.lua(00094),,,,,,Gameplay,Gameplay,系統,,OK,,
 1354,194283,Controls,Lua/UI/Options.lua(00232),,,,,,Controls,Controls,操作,,OK,,
 1355,194283,<font MenuOptionsListItem><left><text></font>,Lua/UI/Options.lua(00263),,,,,,<font MenuOptionsListItem><left><text></font>,<font MenuOptionsListItem><left><text></font>,<font MenuOptionsListItem><left><text></font>,,OK,,
 1356,194283,<font MenuOptionsListItem><left><text></font>,Lua/UI/Options.lua(00281),,,,,,<font MenuOptionsListItem><left><text></font>,<font MenuOptionsListItem><left><text></font>,<font MenuOptionsListItem><left><text></font>,,OK,,
@@ -4241,26 +4241,26 @@ Code ""<err>""","抱歉，伺服器回傳一個錯誤。
 1487,194283,<color 236 236 236>On</color>,Lua/UI/Options.lua(01949),,,,,,<color 236 236 236>On</color>,<color 236 236 236>On</color>,<color 236 236 236>開啟</color>,,OK,,
 1488,194283,<color 146 146 146>On</color>,Lua/UI/Options.lua(01950),,,,,,<color 146 146 146>On</color>,<color 146 146 146>On</color>,<color 146 146 146>開啟</color>,,OK,,
 1489,194283,<font MenuOptionsListItem><left><label>:<right><state></font>,Lua/UI/Options.lua(01967),,,,,,<font MenuOptionsListItem><left><label>:<right><state></font>,<font MenuOptionsListItem><left><label>:<right><state></font>,<font MenuOptionsListItem><left><label>：<right><state></font>,,OK,,
-4165,196097,<h>:<m1><m2>:<s1><s2>,Lua/UI/PreGameMenu.lua(00016),,,,,,,,<h>：<m1><m2>：<s1><s2>,,OK,,
+4165,196097,<h>:<m1><m2>:<s1><s2>,Lua/UI/PreGameMenu.lua(00016),,,,,,,,<h>:<m1><m2>:<s1><s2>,,OK,,
 1490,194283,News,Lua/UI/PreGameMenu.lua(00102),,,,,,News,News,新消息,,OK,,
 1492,196015,#<slot> Empty slot,Lua/UI/PreGameMenu.lua(00257),,,,,,New Character,New Character,#<slot> 空白存檔,,OK,,
-1491,196015,"#<slot> Level <level>, Time <time>",Lua/UI/PreGameMenu.lua(00259),,,,,,Level <level>,Level <level>,#<slot> 等級<level>，遊戲時間<time>,,OK,,
+1491,196015,"#<slot> Level <level>, Time <time>",Lua/UI/PreGameMenu.lua(00259),,,,,,Level <level>,Level <level>,#<slot> 等級：<level>，遊戲時間：<time>,,OK,,
 4237,197009,#<slot> Warning: Cannot load.,Lua/UI/PreGameMenu.lua(00261),,,,,,,,#<slot> 警告：無法讀取。,,OK,,
 1497,196015,<A> Start a new game,Lua/UI/PreGameMenu.lua(00285),,,,,,<A> Create a new character,<A> Create a new character,<A> 開始新遊戲,,OK,,
 1498,196015,Start a new game,Lua/UI/PreGameMenu.lua(00285),,,,,,Select this option to create a new character,Select this option to create a new character,開始新遊戲,,OK,,
 4238,197009,The save file is corrupt or is locked by another application.,Lua/UI/PreGameMenu.lua(00287),,,,,,,,存檔已損毀，或被其它應用程式鎖住。,,OK,,
-515,194283,Renown Level <level>,Lua/UI/PreGameMenu.lua(00290),,,,,,Renown Level <level>,Renown Level <level>,聲望等級<level>,,OK,,
-880,194283,Level <level>,Lua/UI/PreGameMenu.lua(00292),,,,,,Level <level>,Level <level>,等級<level>,,OK,,
-1495,196015,Time <time>,Lua/UI/PreGameMenu.lua(00295),,,,,,<name> Level <level> <center><main_quest>,<name> Level <level> <center><main_quest>,遊戲時間<time>,,OK,,
+515,194283,Renown Level <level>,Lua/UI/PreGameMenu.lua(00290),,,,,,Renown Level <level>,Renown Level <level>,聲望等級：<level>,,OK,,
+880,194283,Level <level>,Lua/UI/PreGameMenu.lua(00292),,,,,,Level <level>,Level <level>,等級：<level>,,OK,,
+1495,196015,Time <time>,Lua/UI/PreGameMenu.lua(00295),,,,,,<name> Level <level> <center><main_quest>,<name> Level <level> <center><main_quest>,遊戲時間：<time>,,OK,,
 4334,198395,<red>Hardcore</red>,Lua/UI/PreGameMenu.lua(00298),,,,,,,,<red>硬派模式</red>,,OK,,
-4191,196416,Deaths,Lua/UI/PreGameMenu.lua(00300),,,,,,,,死亡數,,OK,,
-1095,194283,Renown <level>,Lua/UI/PreGameMenu.lua(00304),,,,,,Renown <level>,Renown <level>,聲望<level>,,OK,,
+4191,196416,Deaths,Lua/UI/PreGameMenu.lua(00300),,,,,,,,死亡數：,,OK,,
+1095,194283,Renown <level>,Lua/UI/PreGameMenu.lua(00304),,,,,,Renown <level>,Renown <level>,聲望：<level>,,OK,,
 4335,198395,First Death,Lua/UI/PreGameMenu.lua(00306),,,,,,,,第一次死亡,,OK,,
-4336,198395,Level <number>,Lua/UI/PreGameMenu.lua(00306),,,,,,,,等級<number>,,OK,,
+4336,198395,Level <number>,Lua/UI/PreGameMenu.lua(00306),,,,,,,,等級：<number>,,OK,,
 1494,194283,None,Lua/UI/PreGameMenu.lua(00310),,,,,,None,None,無,,OK,,
 4166,196097,Quest: <main_quest>,Lua/UI/PreGameMenu.lua(00310),,,,,,,,任務：<main_quest>,,OK,,
-4167,196097,Challenges <completed>/<total>,Lua/UI/PreGameMenu.lua(00312),,,,,,,,挑戰<completed>/<total>,,OK,,
-4168,196097,", Elite <completed>/<total>",Lua/UI/PreGameMenu.lua(00315),,,,,,,,精英<completed>/<total>,,OK,,
+4167,196097,Challenges <completed>/<total>,Lua/UI/PreGameMenu.lua(00312),,,,,,,,挑戰：<completed>/<total>,,OK,,
+4168,196097,", Elite <completed>/<total>",Lua/UI/PreGameMenu.lua(00315),,,,,,,,精英：<completed>/<total>,,OK,,
 1500,194283,Press <Y> to delete ,Lua/UI/PreGameMenu.lua(00317),,,,,,Press <Y> to delete ,Press <Y> to delete ,按 <Y> 刪除,,OK,,
 1501,194283,Press Del to delete ,Lua/UI/PreGameMenu.lua(00317),,,,,,Press Del to delete ,Press Del to delete ,按 Del 刪除,,OK,,
 1499,196725,Save Slot #<slot>,Lua/UI/PreGameMenu.lua(00320),,,,,,<font MenuListItem>Save Slot #<slot></font><newline>,<font MenuListItem>Save Slot #<slot></font><newline>,存檔 #<slot>,,OK,,
@@ -4280,7 +4280,7 @@ Code ""<err>""","抱歉，伺服器回傳一個錯誤。
 3655,195030,Choose your control scheme,Lua/UI/PreGameMenu.lua(00470),,,,,,,,選擇你的操作方式,,OK,,
 1513,194283,Exit game?,Lua/UI/PreGameMenu.lua(00478),,,,,,Exit game?,Exit game?,離開遊戲？,,OK,,
 1506,194283,Play,Lua/UI/PreGameMenu.lua(00586),,,,,,Play,Play,開始遊戲,,OK,,
-1507,194283,Online,Lua/UI/PreGameMenu.lua(00603),,,,,,Online,Online,線上,,OK,,
+1507,194283,Online,Lua/UI/PreGameMenu.lua(00603),,,,,,Online,Online,連線,,OK,,
 3935,196015,Save Slot,Lua/UI/PreGameMenu.lua(00612),,,,,,Change Character,Change Character,存檔,,OK,,
 1508,194283,Achievements,Lua/UI/PreGameMenu.lua(00620),,,,,,Achievements,Achievements,成就,,OK,,
 1510,194283,Options,Lua/UI/PreGameMenu.lua(00628),,,,,,Options,Options,選項,,OK,,
